--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 TOKEN=
 MONGO_URL=mongodb+srv://ruhan123@:ruhan123@@cluster0.ruoho4j.mongodb.net/?retryWrites=true&w=majority
 PREFIX=+
-GUILD_ID=
+GUILD_ID=1383456780025073726
