--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-TOKEN=
+TOKEN=MTM4MzgwNDQ2MTk4NTY5Mzc2Nw.Gwqs5y.7u4F0zroYr35TmH__h_-iz20atcoxkHUk48N7M
 MONGO_URL=mongodb+srv://ruhan123@:ruhan123@@cluster0.ruoho4j.mongodb.net/?retryWrites=true&w=majority
 PREFIX=+
 GUILD_ID=1383456780025073726
